--- a/src/Main/Main.css
+++ b/src/Main/Main.css
@@ -1,5 +1,12 @@
-.main {
-	position: relative;
-	left: 200px;
-	top: 100px;
+main {
+	position: static;
+	margin-left: 200px;
+	margin-top: 100px;
+}
+
+.note {
+	border: 1px solid black;
+	width: 70%;
+	margin: 10px;
+	padding: 10px;
 }
