refactored for add folder button

--- a/src/Sidebar/Sidebar.css
+++ b/src/Sidebar/Sidebar.css
@@ -6,3 +6,14 @@
 .folder-highlight {
 	background-color: #add8e6;
 }
+
+.add-folder-button {
+	margin: 10px;
+}
+
+.folderdisplay {
+	margin: 10px;
+	margin-bottom: 20px;
+}
+
+
